base/MyVATUSA/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myvatusa-service
  labels:
    app: myvatusa
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: myvatusa
