base/MyVATUSA/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myvatusa-ingress
  labels:
    app: myvatusa
spec:
  ingressClassName: nginx
  rules:
    - host: my.vatusa.dev
      http:
        paths:
          - backend:
              service:
                name: myvatusa-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - my.vatusa.dev
      secretName: my-vatusa-dev-tls
